--- a/cv_app/src/App.css
+++ b/cv_app/src/App.css
@@ -1,10 +1,21 @@
 #root {
   margin: 0 auto;
-  padding: 20px;
   min-width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
+}
+
+.aside {
+  max-width: 420px;
+  width: 100%;
+  border-right: 2px solid #bdbdbd;
+}
+
+.aside p {
+  font-size: 1.8rem;
+  padding: 0 1.2rem;
+  font-weight: 500;
 }
 
 .cv-section {
@@ -14,19 +25,36 @@
 .detailsButton {
   padding: 1.2rem;
   display: flex;
-  gap: 14px;
+  flex-wrap: wrap;
+  gap: 8px;
+  border-top: 2px solid #bdbdbd;
+  border-bottom: 2px solid #bdbdbd;
 }
 
 .detailsButton button {
+  flex: 0.5 0.5 calc(33.33% - 8px);
   background-color: #393939;
   padding: 0.6rem 0.9rem;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   border: none;
   border-radius: 20px;
   transition: 0.3s ease-in;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .detailsButton button:hover {
   background-color: #7b7b7b;
+}
+
+.inputSection {
+  padding: 1.2rem;
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.personalInfo {
+  display: flex;
+  flex-direction: column;
 }
