--- a/cv_app/src/index.css
+++ b/cv_app/src/index.css
@@ -1,6 +1,6 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
+  line-height: 1.3;
   font-weight: 400;
 
   color-scheme: light dark;
@@ -22,7 +22,8 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 1.6rem;
+  text-align: center;
 }
 
 .heading h1 {
