--- a/cv_app/src/App.css
+++ b/cv_app/src/App.css
@@ -4,6 +4,7 @@
   min-height: 100vh;
   display: flex;
   flex-wrap: wrap;
+  box-sizing: border-box;
 }
 
 .aside {
@@ -43,8 +44,8 @@
   font-size: 1.3rem;
   border: none;
   border-radius: 20px;
-  transition: background-color 0.3s ease-in;
   cursor: pointer;
+  transition: background-color 0.3s ease-in;
   box-sizing: border-box;
 }
 
@@ -56,7 +57,7 @@
   padding: 1.2rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  gap: 2rem;
   font-size: 1.6rem;
   box-sizing: border-box;
 }
@@ -65,26 +66,29 @@
 .education {
   display: flex;
   flex-direction: column;
-  gap: 10px;
-  padding: 1rem;
+  gap: 1.5rem;
+  padding: 1.5rem;
+  border: 2px solid #bdbdbd;
+  border-radius: 10px;
   box-sizing: border-box;
 }
 
 h2 {
   font-size: 2rem;
-  padding: 0 1.4rem;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 label {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 input {
   font-size: 1.2rem;
-  padding: 1.2rem;
+  padding: 1rem 1.2rem;
   border-radius: 20px;
   border: 2px solid transparent;
   transition: border-color 0.3s ease-in;
