--- a/cv_app/src/App.css
+++ b/cv_app/src/App.css
@@ -7,6 +7,10 @@
   box-sizing: border-box;
 }
 
+br {
+  color: #ffffff;
+}
+
 .aside {
   max-width: 420px;
   width: 100%;
@@ -92,4 +96,39 @@ input {
 
 input:hover {
   border-color: #919191;
+}
+
+.cv-section {
+  font-size: 1.6rem;
+  padding: 1.3rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.cv {
+  color: black;
+  background-color: white;
+  min-height: 100vh;
+  padding: 0 1.4rem;
+  border: 2px solid #bdbdbd;
+  border-radius: 10px;
+  box-shadow: 0 4 12px rgba(0, 0, 0, 0.25);
+  overflow-y: auto;
+}
+
+.top {
+  display: flex;
+  flex-direction: column;
+}
+
+.top h1 {
+  font-size: 1.2em;
+}
+
+.userDetail {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.4rem;
+
 }
