--- a/cv_app/src/App.css
+++ b/cv_app/src/App.css
@@ -16,6 +16,7 @@ br {
   width: 100%;
   border-right: 2px solid #bdbdbd;
   box-sizing: border-box;
+  background-color: #4f4f4f;
 }
 
 .aside p {
@@ -23,11 +24,6 @@ br {
   font-size: 1.8rem;
   padding: 0 1.2rem;
   font-weight: 700;
-}
-
-.cv-section {
-  flex-grow: 1;
-  box-sizing: border-box;
 }
 
 .detailsButton {
@@ -99,10 +95,10 @@ input:hover {
 }
 
 .cv-section {
-  font-size: 1.6rem;
-  padding: 1.3rem;
-  display: flex;
-  flex-direction: column;
+  flex-grow: 1;
+  box-sizing: border-box;
+  overflow-y: auto;
+  padding: 3rem 6rem;
 }
 
 .cv {
@@ -110,10 +106,11 @@ input:hover {
   background-color: white;
   min-height: 100vh;
   padding: 0 1.4rem;
-  border: 2px solid #bdbdbd;
+  border-top: 1px solid #4f4f4f;
+  border-left: 1px solid #4f4f4f;
   border-radius: 10px;
-  box-shadow: 0 4 12px rgba(0, 0, 0, 0.25);
-  overflow-y: auto;
+  box-shadow: 8px 10px 12px #4f4f4f;
+  box-sizing: border-box;
 }
 
 .top {
